--- a/blackJack.html
+++ b/blackJack.html
@@ -10,7 +10,9 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Simple 21</h1>
+    <h1>
+        <img src="https://fontmeme.com/permalink/191217/eaa398b53c2fd26aa652c93a8562da06.png"/>
+    </h1>
     <div class="scoreBoard"></div>
     <div class="blackJack">
     <div class="dealerScore"></div>
