--- a/blackJack.html
+++ b/blackJack.html
@@ -11,7 +11,7 @@
 </head>
 <body>
     <h1>
-        <img src="https://fontmeme.com/permalink/191217/eaa398b53c2fd26aa652c93a8562da06.png"/>
+        <img class="pic" src="https://fontmeme.com/permalink/191217/eaa398b53c2fd26aa652c93a8562da06.png"/>
     </h1>
     <div class="scoreBoard"></div>
     <div class="blackJack">
