Add refresh page

--- a/blackJack.html
+++ b/blackJack.html
@@ -19,6 +19,7 @@
         <button class="start">Start Game</button>
         <button class ="hit">Hit</button>
         <button class="stay">Stay</button>
+        <button class ="refresh"onClick="window.location.reload();">Refresh Page</button>
     </div> 
     
     <div class="cards">
